--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <!-- Core theme CSS (includes Bootstrap)-->
 
-    <link href="/css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body id="page-top">
     <!-- Header-->
