--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="col-md-4 d-flex align-items-center">
                 <img
                   style="height: auto"
-                  src="/assets/img/lesson-01.png"
+                  src="assets/img/lesson-01.png"
                   class="card-img img-fluid"
                   alt="Lesson 01: Python"
                 />
