--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a
           class="btn btn-primary btn-xl rounded-pill mt-5"
           style="font-size: 15px"
-          href="#scroll"
+          href="https://elearning.unideb.hu/"
           ><i class="fa-sharp fa-solid fa-graduation-cap"></i> Go to elearning website</a
         >
         </div>
@@ -115,7 +115,7 @@
                 <h4 class="text-uppercase m-0">GitHub</h4>
                 <hr class="my-4 mx-auto" />
                 <div class="small text-black-50">
-                  <a href="#">GitHub repository</a>
+                  <a href="https://github.com/gergobogacsovics/intro-to-rl">GitHub repository</a>
                 </div>
               </div>
             </div>
