Fixed mobile layout issues

--- a/index.html
+++ b/index.html
@@ -39,18 +39,25 @@
           <h6 class="masthead-subheading mb-0 mt-3 mb-2">
             University of Debrecen, 2022 Fall
           </h6>
-          <a
-            class="btn btn-primary btn-xl rounded-pill mt-5"
-            style="font-size: 15px; margin-right: 50px"
-            href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs"
-            ><i class="fa-brands fa-github"></i> Go to GitHub repository</a
-          >
-          <a
-          class="btn btn-primary btn-xl rounded-pill mt-5"
-          style="font-size: 15px"
-          href="https://elearning.unideb.hu/"
-          ><i class="fa-sharp fa-solid fa-graduation-cap"></i> Go to elearning website</a
-        >
+                    <div class="row">
+            <div class="col-xl-6 col-sm-12">
+              <a
+                class="btn btn-primary btn-xl rounded-pill mt-5"
+                style="font-size: 15px"
+                href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs"
+                ><i class="fa-brands fa-github"></i> Go to GitHub repository</a
+              >
+            </div>
+
+            <div class="col-xl-6 col-sm-12">
+              <a
+                class="btn btn-primary btn-xl rounded-pill mt-5"
+                style="font-size: 15px"
+                href="#scroll"
+                ><i class="fa-sharp fa-solid fa-graduation-cap"></i> Go to
+                elearning website</a
+              >
+            </div>
         </div>
       </div>
     </header>
