--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
                   </h5>
                   <p class="card-text">
                     The basics of the Python programming language.
-                    <br>
-                    Topics covered: data types, lists, sets, dictionaries, functions. NumPy, Matplotlib.
+                  </p>
+                  <p class="card-text">
+                    <b>Topics covered:</b> data types, lists, sets, dictionaries, functions. NumPy, Matplotlib.
                   </p>
                   <a
                     class="btn btn-primary mt-1"
@@ -103,6 +104,42 @@
                   <ul>
                     <li><a href="https://docs.python.org/3/tutorial/">Official Python tutorial</a></li>
                 </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="container px-5 mt-5">
+        <div class="row gx-5 align-items-center">
+          <div class="card card-item mb-3 shadow">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center">
+                <img
+                  style="height: auto"
+                  src="assets/img/lesson-02.png"
+                  class="card-img img-fluid"
+                  alt="Lesson 02: The basics of reinforcement learning"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title display-4">
+                    Lesson 02 - The basics of RL
+                  </h5>
+                  <p class="card-text">
+                    The basics of reinforcement learning and the most important definitions (state, action, reward). The behaviour of random agents.
+                  </p>
+                  <p class="card-text">
+                    <b>Topics covered:</b> the RL framework, MDP, reward hypothesis.
+                  </p>
+                  <a
+                    class="btn btn-primary mt-1"
+                    style="font-size: 15px"
+                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/02%20-%20Basics%20of%20RL"
+                    ><i class="fa-brands fa-github"></i> Open GitHub folder</a
+                  >
                 </div>
               </div>
             </div>
