--- a/index.html
+++ b/index.html
@@ -146,6 +146,43 @@
           </div>
         </div>
       </div>
+      
+      <div class="container px-5 mt-5">
+        <div class="row gx-5 align-items-center">
+          <div class="card card-item mb-3 shadow">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center">
+                <img
+                  style="height: auto"
+                  src="assets/img/lesson-02.png"
+                  class="card-img img-fluid"
+                  alt="Lesson 03: Q-learning"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title display-4">
+                    Lesson 03 - Q-learning
+                  </h5>
+                  <p class="card-text">
+                    The basics of Q-learning.
+                  </p>
+                  <p class="card-text">
+                    <b>Topics covered:</b> types of RL algorithms, discount factors, exploration vs exploitation, value-based methods.
+                  </p>
+                  <a
+                    class="btn btn-primary mt-1"
+                    style="font-size: 15px"
+                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/03%20-%20Q-learning"
+                    ><i class="fa-brands fa-github"></i> Open GitHub folder</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </section>
 
     <!-- Contact-->
