--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <div class="col-md-4 d-flex align-items-center">
                 <img
                   style="height: auto"
-                  src="assets/img/lesson-02.png"
+                  src="assets/img/lesson-03.png"
                   class="card-img img-fluid"
                   alt="Lesson 03: Q-learning"
                 />
@@ -165,7 +165,7 @@
                     Lesson 03 - Q-learning
                   </h5>
                   <p class="card-text">
-                    The basics of Q-learning.
+                    The various groups of reinforcement learning algorithms. The motivation behind value-based methods & the basics of Q-learning.
                   </p>
                   <p class="card-text">
                     <b>Topics covered:</b> types of RL algorithms, discount factors, exploration vs exploitation, value-based methods.
