--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     Lesson 03 - Q-learning
                   </h5>
                   <p class="card-text">
-                    The various groups of reinforcement learning algorithms. The motivation behind value-based methods & the basics of Q-learning.
+                    The various groups of reinforcement learning algorithms. The motivation behind value-based methods &amp; the basics of Q-learning.
                   </p>
                   <p class="card-text">
                     <b>Topics covered:</b> types of RL algorithms, discount factors, exploration vs exploitation, value-based methods.
