--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a
                 class="btn btn-primary btn-xl rounded-pill mt-5"
                 style="font-size: 15px"
-                href="#scroll"
+                href="https://elearning.unideb.hu/"
                 ><i class="fa-sharp fa-solid fa-graduation-cap"></i> Go to
                 elearning website</a
               >
