--- a/index.html
+++ b/index.html
@@ -183,6 +183,42 @@
         </div>
       </div>
       
+      <div class="container px-5 mt-5">
+        <div class="row gx-5 align-items-center">
+          <div class="card card-item mb-3 shadow">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center">
+                <img
+                  style="height: auto"
+                  src="assets/img/lesson-04.png"
+                  class="card-img img-fluid"
+                  alt="Lesson 04: OpenAI Gym"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title display-4">
+                    Lesson 04 - OpenAI Gym
+                  </h5>
+                  <p class="card-text">
+                    We explore the capabilities of the OpenAI Gym library that has lots of different environments that we can use to train RL agents.
+                  </p>
+                  <p class="card-text">
+                    <b>Topics covered:</b> OpenAI Gym, types of environments.
+                  </p>
+                  <a
+                    class="btn btn-primary mt-1"
+                    style="font-size: 15px"
+                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/03%20-%20Q-learning"
+                    ><i class="fa-brands fa-github"></i> Open GitHub folder</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </section>
 
     <!-- Contact-->
