--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   <a
                     class="btn btn-primary mt-1"
                     style="font-size: 15px"
-                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/03%20-%20Q-learning"
+                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/04%20-%20OpenAI%20Gym"
                     ><i class="fa-brands fa-github"></i> Open GitHub folder</a
                   >
                 </div>
