--- a/index.html
+++ b/index.html
@@ -219,6 +219,50 @@
         </div>
       </div>
       
+      <div class="container px-5 mt-5">
+        <div class="row gx-5 align-items-center">
+          <div class="card card-item mb-3 shadow">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center">
+                <img
+                  style="height: auto"
+                  src="assets/img/lesson-05.png"
+                  class="card-img img-fluid"
+                  alt="Lesson 05: Unity"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title display-4">
+                    Lesson 05 - Unity
+                  </h5>
+                  <p class="card-text">
+                    We familiarize ourselves with the Unity game engine, learning the basics of 2D and 3D objects and environments.
+                  </p>
+                  <p class="card-text">
+                    <b>Topics covered:</b> basics of Unity, 2d and 3D modeling, basic concepts.
+                  </p>
+                  <a
+                    class="btn btn-primary mt-1"
+                    style="font-size: 15px"
+                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/05%20-%20Unity"
+                    ><i class="fa-brands fa-github"></i> Open GitHub folder</a
+                  >
+                  <p class="card-text mt-3">
+                    Resources:
+                  </p>
+                  <ul>
+                    <li><a href="https://assetstore.unity.com/packages/3d/vehicles/sea/steampunk-submarine-diver-115731">Submarine prefab</a></li>
+                    <li><a href="https://assetstore.unity.com/packages/3d/environments/fantasy/treasure-chest-free-sample-135417">Treasure prefab</a></li>
+                    <li><a href="https://assetstore.unity.com/packages/2d/textures-materials/water/stylize-water-texture-153577">Water prefab</a></li>
+                </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </section>
 
     <!-- Contact-->
