--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@
                     Resources:
                   </p>
                   <ul>
+                    <li><a href="https://unity3d.com/get-unity/download">Unity download page</a></li>
+                    <li><a href="https://assetstore.unity.com/">Unity Asset Store</a></li>
                     <li><a href="https://assetstore.unity.com/packages/3d/vehicles/sea/steampunk-submarine-diver-115731">Submarine prefab</a></li>
                     <li><a href="https://assetstore.unity.com/packages/3d/environments/fantasy/treasure-chest-free-sample-135417">Treasure prefab</a></li>
                     <li><a href="https://assetstore.unity.com/packages/2d/textures-materials/water/stylize-water-texture-153577">Water prefab</a></li>
