--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
                     <li><a href="https://assetstore.unity.com/">Unity Asset Store</a></li>
                     <li><a href="https://assetstore.unity.com/packages/3d/vehicles/sea/steampunk-submarine-diver-115731">Submarine prefab</a></li>
                     <li><a href="https://assetstore.unity.com/packages/3d/environments/fantasy/treasure-chest-free-sample-135417">Treasure prefab</a></li>
-                    <li><a href="https://assetstore.unity.com/packages/2d/textures-materials/water/stylize-water-texture-153577">Water prefab</a></li>
+                    <li><a href="https://assetstore.unity.com/packages/2d/textures-materials/water/stylize-water-texture-153577">Water texture prefab</a></li>
+                    <li><a href="https://assetstore.unity.com/packages/essentials/asset-packs/standard-assets-for-unity-2018-4-32351">Standard Assets (for the water prefab)</a></li>
                 </ul>
                 </div>
               </div>
