--- a/index.html
+++ b/index.html
@@ -266,6 +266,49 @@
         </div>
       </div>
       
+      <div class="container px-5 mt-5">
+        <div class="row gx-5 align-items-center">
+          <div class="card card-item mb-3 shadow">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center">
+                <img
+                  style="height: auto"
+                  src="assets/img/lesson-06.png"
+                  class="card-img img-fluid"
+                  alt="Lesson 06: ML Agents"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title display-4">
+                    Lesson 06 - Unity ML-Agents Toolkit
+                  </h5>
+                  <p class="card-text">
+                    We dive deeper into reinforcement learning by exploring the capabilities of the Unity ML-Agents Toolkit plugin.
+                  </p>
+                  <p class="card-text">
+                    <b>Topics covered:</b> basics of Unity ML-Agents Toolkit, RL in Unity, key definitions &amp; workflow.
+                  </p>
+                  <a
+                    class="btn btn-primary mt-1"
+                    style="font-size: 15px"
+                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/06%20-%20ML%20Agents"
+                    ><i class="fa-brands fa-github"></i> Open GitHub folder</a
+                  >
+                  <p class="card-text mt-3">
+                    Resources:
+                  </p>
+                  <ul>
+                    <li><a href="https://elearning.unideb.hu/">Check out the installation guide on the e-learning website</a></li>
+                    <li><p>Running ML Agents from the command line: mlagents-learn --torch-device "cpu"</p></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </section>
 
     <!-- Contact-->
