--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     Lesson 08 - Tips for training your agents
                   </h5>
                   <p class="card-text">
-                    We discuss what the best practices are that should be followed when training RL agents in Unity.
+                    We discuss what best practices should be followed when training RL agents in Unity.
                   </p>
                   <p class="card-text">
                     <b>Topics covered:</b> training tips &amp; limitations.
