--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
                   <ul>
                     <li><a href="https://github.com/miyamotok0105/unity-ml-agents/blob/master/docs/Training-PPO.md">ML-Agents PPO configuration notes</a></li>
                     <li><a href="https://github.com/Unity-Technologies/ml-agents/blob/main/docs/Training-Configuration-File.md">YAML file parameters</a></li>
+                    <li><a href="https://github.com/Unity-Technologies/ml-agents/tree/main/config/ppo">Example YAML files</a></li>
                     <li><a href="https://github.com/Unity-Technologies/ml-agents/blob/main/docs/Learning-Environment-Design-Agents.md">ML-Agents Agent notes</a></li>
                     <li><a href="https://github.com/Unity-Technologies/ml-agents/blob/main/docs/Learning-Environment-Examples.md">Example environments (design)</a></li>
                     <li><a href="https://github.com/Unity-Technologies/ml-agents/tree/main/Project/Assets/ML-Agents/Examples">Example environments (code)</a></li>
