--- a/index.html
+++ b/index.html
@@ -403,6 +403,51 @@
         </div>
       </div>
       
+      <div class="container px-5 mt-5">
+        <div class="row gx-5 align-items-center">
+          <div class="card card-item mb-3 shadow">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center">
+                <img
+                  style="height: auto"
+                  src="assets/img/lesson-09.png"
+                  class="card-img img-fluid"
+                  alt="Lesson 09: Using sensors for perceiving the environment"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title display-4">
+                    Lesson 08 - Using sensors for perceiving the environment
+                  </h5>
+                  <p class="card-text">
+                    We experiment with sensors and show how they can be used to let your agent perceive the environment.
+                  </p>
+                  <p class="card-text">
+                    <b>Topics covered:</b> sensors, raycasts &amp; sensor scripts available in ML Agents.
+                  </p>
+                  <a
+                    class="btn btn-primary mt-1"
+                    style="font-size: 15px"
+                    href="https://github.com/gergobogacsovics/intro-to-rl/tree/main/labs/09%20-%20Multiple%20environments"
+                    ><i class="fa-brands fa-github"></i> Open GitHub folder</a
+                  >
+                  <p class="card-text mt-3">
+                    Resources:
+                  </p>
+                  <ul>
+                    <li><a href="https://docs.unity3d.com/Packages/com.unity.ml-agents@1.0/api/Unity.MLAgents.Sensors.RayPerceptionSensorComponent2D.html">RayPerceptionSensorComponent2D in Unity</a></li>
+                    <li><a href="https://docs.unity3d.com/Packages/com.unity.ml-agents@1.0/api/Unity.MLAgents.Sensors.RayPerceptionSensorComponent3D.html">RayPerceptionSensorComponent3D in Unity</a></li>
+                    <li><p>Running ML Agents from the command line with the YAML file: mlagents-learn .\DodgeTheBall.yaml --run-id="Run 1"</p></li>
+                    <li><p>Checking tensorboard logs: tensorboard --logdir results</p></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </section>
 
     <!-- Contact-->
